# recipe-api

./: README.md  conftest.py  create_tables.py  pyproject.toml
data/factories/: ingredient.py  recipe.py  recipeingredient.py
data/models/: __init__.py  enums.py  ingredient.py  recipe.py  recipeingredient.py
data/models/tests/: test_recipe.py
data/wrappers/: ingredientunitwrapper.py
data/wrappers/tests/: test_ingredientunitwrapper.py
domain/: db.py  recipe.py  recipeingredient.py
domain/tests/: test_recipe.py  test_recipeingredient.py
interfaces/: api.py
interfaces/rest_api/routers/: recipe.py
interfaces/schemas/: ingredientschema.py  recipeschema.py
interfaces/tests/rest_api/routers/: test_recipe.py
requirements/: base.txt  local.txt
