[project]
name = "recipe-api"
version = "0.1.0"
description = "Recipe API"


# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
asyncio_default_fixture_loop_scope = "function"
python_files = [
    "tests.py",
    "test_*.py",
]
markers = ["integration: tests that test multiple components together"]

# ==== Coverage ====
[tool.coverage.run]
include = ["data/**", "domain/**", "interfaces/**"]
omit = ["*/migrations/*", "*/tests/*", "*/conftest.py"]
branch = true
command_line = '-m pytest -m "not integration"'

[tool.coverage.report]
fail_under = 100
precision = 2
skip_empty = true
sort = "Cover"
exclude_lines = ["pragma: no cover", "@abstractmethod", "if TYPE_CHECKING:"]

# ==== mypy ====
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
show_error_codes = true
exclude = [".venv", "venv", "migrations", "playground.py"]
plugins = ["sqlalchemy.ext.mypy.plugin"]


[[tool.mypy.overrides]]
# Migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # stylistic choices
    "D102",  # missing docstring in public method
    "D103",  # docstring in public method
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
    "PD901",  # avoid using df as variable name
    "PGH005", # non-existent mock method
    # conflict with other rules
    "D211",
    "D213",
    # unsupported by formatter
    "COM812",
    "E501",
    "ISC001",
    # manually disabled
    "A003",
    "ANN401",
    "D100",
    "D101",
    "D104",
    "D106",
    "FBT001",
    "FBT002",
    "RUF012",
    "TD002",
    "TD003",
]
exclude = ["migrations/*", "conftest.py", "playground.py", "load_scripts/*", "venv/*", ".venv/*"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["D", "PLR2004", "S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["config", "data", "domain", "interfaces", "utils"]
split-on-trailing-comma = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true
